--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         // --- ВАЖНО: Замените этот URL на URL вашего Cloudflare Worker'а ---
         // Например: https://unity-websocket-proxy.ВАШ_АККАУНТ.workers.dev/ws
-        const CLOUDFLARE_WORKER_URL = "https://unity-websocket-proxy.ВАШ_АККАУНТ.workers.dev/ws";
+        const CLOUDFLARE_WORKER_URL = "https://unity-websocket-proxy.turgunbekarstanbekov55.workers.dev/";
         // ------------------------------------------------------------------
 
         const JUMP_ACCEL_THRESHOLD = 8.0;
